--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -5,15 +5,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-06-27 11:01 UTC\n"
-"PO-Revision-Date: 2022-04-28 20:49+0200\n"
-"Last-Translator: Michal Žejdl <lachim@emer.cz>\n"
+"POT-Creation-Date: 2022-07-02 02:44 UTC\n"
+"PO-Revision-Date: 2022-07-01 22:51-0400\n"
+"Last-Translator: Eric Gallager <egall@gwmail.gwu.edu>\n"
 "Language-Team: Czech https://wiki.wesnoth.org/CzechTranslation\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n>=2 && n<=4 ? 1 : 2);\n"
+"X-Generator: Poedit 3.1\n"
 
 #. [campaign]: id=A_little_Adventure
 #. Strings from utils/ALA_Deaths.cfg used to get put in the potfile
@@ -113,6 +114,11 @@ msgstr "Italský překlad"
 #: A_Little_Adventure/_main.cfg:103
 msgid "Czech Translation"
 msgstr "Český překlad"
+
+#. [about]
+#: A_Little_Adventure/_main.cfg:111
+msgid "Japanese Translation"
+msgstr "Japonský překlad"
 
 #. [scenario]: id=01_The_Attack_to_Amoran
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:6
