--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -6,15 +6,15 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2022-10-16 03:14 UTC\n"
-"PO-Revision-Date: 2022-07-01 22:51-0400\n"
-"Last-Translator: Eric Gallager <egall@gwmail.gwu.edu>\n"
+"PO-Revision-Date: 2022-11-01 19:13+0100\n"
+"Last-Translator: Septim <septim@centrum.cz>\n"
 "Language-Team: Czech https://wiki.wesnoth.org/CzechTranslation\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n>=2 && n<=4 ? 1 : 2);\n"
-"X-Generator: Poedit 3.1\n"
+"X-Generator: Poedit 3.1.1\n"
 
 #. [campaign]: id=A_little_Adventure
 #. Strings from utils/ALA_Deaths.cfg used to get put in the potfile
@@ -459,7 +459,7 @@ msgstr "Poraz Kssihisse"
 #: A_Little_Adventure/scenarios/03_The_Nagas_Nest.cfg:215
 #: A_Little_Adventure/scenarios/04_The_Bloody_Hills.cfg:69
 msgid "Death of $trapper_name"
-msgstr ""
+msgstr "$trapper_name zemře"
 
 #. [message]: speaker=Glubtrub
 #. "Wetspot" is ogre-speak for "Wesnoth"; I will try to ensure it's capitalized consistently:
@@ -608,7 +608,7 @@ msgstr "Rozmačkej... nebo poraz ještěráckého vůdce"
 #. [note]
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:119
 msgid "The death of $trapper_name will no longer cause defeat."
-msgstr ""
+msgstr "Od této chvíle již neprohraješ, pokud $trapper_name zemře."
 
 #. [message]: speaker=Giksy
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:216
@@ -2355,52 +2355,36 @@ msgstr ""
 msgid "Let's try to talk to him, and hear what he wants."
 msgstr "Zkusme s ním promluvit a vyslechnout si, co chce."
 
-# Seržant vynechán, neboť v té době už bude tak jako tak na vyšší úrovni.
 #. [message]: speaker=Glauco
 #. this is the farthest Glauco can advance:
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:750
-#, fuzzy
-#| msgid ""
-#| "I'm the sergeant Glauco, military commander of the city of Amoran! I ask "
-#| "to speak with the warlord called Gan-Tarkas."
 msgid ""
 "I'm the grand marshal Glauco, military commander of the city of Amoran! I "
 "ask to speak with the warlord called Gan-Tarkas."
 msgstr ""
-"Jsem Glauko, vojenský velitel města Amoran! Žádám o rozhovor s vojevůdcem "
-"jménem Gan-Tarkas."
+"Jsem velký maršál Glauko, vojenský velitel města Amoran! Žádám o rozhovor s "
+"vojevůdcem jménem Gan-Tarkas."
 
-# Seržant vynechán, neboť v té době už bude tak jako tak na vyšší úrovni.
 #. [message]: speaker=Glauco
 #. "general" in the sense of the military rank; this is as far as Glauco has usually made it for me:
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:758
-#, fuzzy
-#| msgid ""
-#| "I'm the sergeant Glauco, military commander of the city of Amoran! I ask "
-#| "to speak with the warlord called Gan-Tarkas."
 msgid ""
 "I'm the general Glauco, military commander of the city of Amoran! I ask to "
 "speak with the warlord called Gan-Tarkas."
 msgstr ""
-"Jsem Glauko, vojenský velitel města Amoran! Žádám o rozhovor s vojevůdcem "
-"jménem Gan-Tarkas."
+"Jsem generál Glauko, vojenský velitel města Amoran! Žádám o rozhovor s "
+"vojevůdcem jménem Gan-Tarkas."
 
-# Seržant vynechán, neboť v té době už bude tak jako tak na vyšší úrovni.
 #. [message]: speaker=Glauco
 #. if the player hasn't been using Glauco much for combat, he might still be a lieutenant (has happened to me before):
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:766
-#, fuzzy
-#| msgid ""
-#| "I'm the sergeant Glauco, military commander of the city of Amoran! I ask "
-#| "to speak with the warlord called Gan-Tarkas."
 msgid ""
 "I'm the lieutenant Glauco, military commander of the city of Amoran! I ask "
 "to speak with the warlord called Gan-Tarkas."
 msgstr ""
-"Jsem Glauko, vojenský velitel města Amoran! Žádám o rozhovor s vojevůdcem "
-"jménem Gan-Tarkas."
+"Jsem poručík Glauko, vojenský velitel města Amoran! Žádám o rozhovor s "
+"vojevůdcem jménem Gan-Tarkas."
 
-# Seržant vynechán, neboť v té době už bude tak jako tak na vyšší úrovni.
 #. [message]: speaker=Glauco
 #. if none of the other cases match, assume he's still a sergeant, as that was the default assumption before this switch statement was added:
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:773
@@ -2408,8 +2392,8 @@ msgid ""
 "I'm the sergeant Glauco, military commander of the city of Amoran! I ask to "
 "speak with the warlord called Gan-Tarkas."
 msgstr ""
-"Jsem Glauko, vojenský velitel města Amoran! Žádám o rozhovor s vojevůdcem "
-"jménem Gan-Tarkas."
+"Jsem seržant Glauko, vojenský velitel města Amoran! Žádám o rozhovor s "
+"vojevůdcem jménem Gan-Tarkas."
 
 #. [message]: speaker=Gan-Tarkas
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:780
