--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -1,4 +1,4 @@
-# Petr Šlejhar (Septim), 2022
+# Petr Šlejhar (Septim), 2022 – 2023
 # Michal Žejdl <lachim@emer.cz>, 2022
 #
 msgid ""
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-03-08 03:32 UTC\n"
-"PO-Revision-Date: 2022-12-30 19:10+0100\n"
+"PO-Revision-Date: 2023-09-05 16:18+0200\n"
 "Last-Translator: Septim <septim@centrum.cz>\n"
 "Language-Team: Czech https://wiki.wesnoth.org/CzechTranslation\n"
 "Language: cs\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n>=2 && n<=4 ? 1 : 2);\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #. [campaign]: id=A_little_Adventure
 #. Strings from utils/ALA_Deaths.cfg used to get put in the potfile
@@ -103,7 +103,7 @@ msgstr "Návrh a konfigurace jednotky obrovitého obra"
 #. [about]
 #: A_Little_Adventure/_main.cfg:83
 msgid "She-Ogre portrait"
-msgstr ""
+msgstr "Portrét obryně"
 
 #. [about]
 #: A_Little_Adventure/_main.cfg:90
@@ -508,7 +508,7 @@ msgstr "Glubtrub zemře"
 #. [message]: race=ogre
 #: A_Little_Adventure/scenarios/03_The_Nagas_Nest.cfg:316
 msgid "Yes! Squash skull of snake! Is time!"
-msgstr ""
+msgstr "Jo! Je čas mačkat hadí lebka!"
 
 #. [message]: speaker=narrator
 #: A_Little_Adventure/scenarios/03_The_Nagas_Nest.cfg:351
