--- a/translations/ja/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/ja/LC_MESSAGES/wesnoth-ala.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-12-31 04:31 UTC\n"
-"PO-Revision-Date: 2024-01-01 18:54+0900\n"
+"PO-Revision-Date: 2024-01-01 17:47+0900\n"
 "Last-Translator: konami,k <konamit2008@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -866,7 +866,7 @@ msgstr "川を渡る道をもう一度広げるんだ、そうして全員攻撃
 #. [unit]: type=Naga Myrmidon, id=Hisskss
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:436
 msgid "Hisskss"
-msgstr "Hisskss"
+msgstr "シャーーーッ"
 
 #. [objective]: condition=win
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:472
