--- a/translations/ja/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/ja/LC_MESSAGES/wesnoth-ala.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-12-31 04:31 UTC\n"
-"PO-Revision-Date: 2023-03-10 20:19+0900\n"
+"PO-Revision-Date: 2024-01-01 19:23+0900\n"
 "Last-Translator: konami,k <konamit2008@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 3.4.2\n"
 
 #. [campaign]: id=A_little_Adventure
 #. Strings from utils/ALA_Deaths.cfg used to get put in the potfile
@@ -879,10 +879,8 @@ msgstr "川を渡る道をもう一度広げるんだ、そうして全員攻撃
 
 #. [unit]: type=Naga Myrmidon, id=Hisskss
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:436
-#, fuzzy
-#| msgid "Hissss!"
 msgid "Hisskss"
-msgstr "シャーーーッ！"
+msgstr "Hisskss"
 
 #. [objective]: condition=win
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:472
