--- a/translations/ja/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/ja/LC_MESSAGES/wesnoth-ala.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2024-01-16 00:58 UTC\n"
-"PO-Revision-Date: 2024-01-01 19:23+0900\n"
-"Last-Translator: konami,k <konamit2008@gmail.com>\n"
+"PO-Revision-Date: 2024-01-15 20:12-0500\n"
+"Last-Translator: Eric Gallager <egall@gwmail.gwu.edu>\n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 3.4.2\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #. [campaign]: id=A_little_Adventure
 #. Strings from utils/ALA_Deaths.cfg used to get put in the potfile
@@ -98,10 +98,8 @@ msgstr "素晴らしいオーガキャラクターのデザインと構成"
 
 #. [about]
 #: A_Little_Adventure/_main.cfg:84
-#, fuzzy
-#| msgid "She-Ogre portrait"
 msgid "She-Ogre and Matronly Ogre portraits"
-msgstr "女オーガのポートレイト"
+msgstr "女オーガと肥熟オーガのポートレイト"
 
 #. [about]
 #: A_Little_Adventure/_main.cfg:91
@@ -152,7 +150,7 @@ msgstr "Wesnoth 人"
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:28
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:78
 msgid "Glauco"
-msgstr ""
+msgstr "Glauco"
 
 #. [side]: type=Orcish Warrior, id=Grunto
 #. [side]: type=Orcish Warlord, id=Gan-Tarkas
@@ -165,10 +163,8 @@ msgstr "オーク"
 #. [side]: type=Orcish Warrior, id=Grunto
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:108
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:53
-#, fuzzy
-#| msgid "Defeat Grunto"
 msgid "Grunto"
-msgstr "Grunto を倒す"
+msgstr "Grunto"
 
 #. [side]: type=Bandit, id=Dadoc
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:124
@@ -180,7 +176,7 @@ msgstr "山賊"
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:132
 #: A_Little_Adventure/scenarios/02a_Battle_with_the_Bandits.cfg:50
 msgid "Dadoc"
-msgstr ""
+msgstr "Dadoc"
 
 #. [objective]: condition=win
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:150
@@ -212,22 +208,22 @@ msgstr "どちらのリーダーを倒すかで次のシナリオが決まりま
 #. [event]
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:166
 msgid "Titus"
-msgstr ""
+msgstr "Titus"
 
 #. [event]
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:167
 msgid "Caius"
-msgstr ""
+msgstr "Caius"
 
 #. [event]
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:168
 msgid "Sempronius"
-msgstr ""
+msgstr "Sempronius"
 
 #. [event]
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:169
 msgid "Petronius"
-msgstr ""
+msgstr "Petronius"
 
 #. [event]
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:205
@@ -249,10 +245,8 @@ msgstr "Eastdoor 橋"
 
 #. [unit]: type=Dragoon, type=Cavalryman, id=Geobard
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:256
-#, fuzzy
-#| msgid "Death of Geobard"
 msgid "Geobard"
-msgstr "Geobard の死"
+msgstr "Geobard"
 
 #. [objective]: condition=lose
 #: A_Little_Adventure/scenarios/01_The_Attack_to_Amoran.cfg:283
@@ -356,12 +350,12 @@ msgstr "山賊との戦い"
 #. [unit]: type=Trapper, id=Divaid
 #: A_Little_Adventure/scenarios/02a_Battle_with_the_Bandits.cfg:265
 msgid "Divaid"
-msgstr ""
+msgstr "Divaid"
 
 #. [unit]: type=Gryphon, id=Ranfy
 #: A_Little_Adventure/scenarios/02a_Battle_with_the_Bandits.cfg:288
 msgid "Ranfy"
-msgstr ""
+msgstr "Ranfy"
 
 #. [attack]: type=blade
 #: A_Little_Adventure/scenarios/02a_Battle_with_the_Bandits.cfg:300
@@ -477,51 +471,47 @@ msgstr "Grunto を倒す"
 #. [event]
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:101
 msgid "Perticus"
-msgstr ""
+msgstr "Perticus"
 
 #. [event]
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:102
 msgid "Paroclo"
-msgstr ""
+msgstr "Paroclo"
 
 #. [event]
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:103
 msgid "Octavio"
-msgstr ""
+msgstr "Octavio"
 
 #. [event]
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:104
-#, fuzzy
-#| msgid "Defeat Grunto"
 msgid "Geruntius"
-msgstr "Grunto を倒す"
+msgstr "Geruntius"
 
 #. [event]
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:105
 msgid "Virgulio"
-msgstr ""
+msgstr "Virgulio"
 
 #. [event]
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:106
 msgid "Closofeo"
-msgstr ""
+msgstr "Closofeo"
 
 #. [event]
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:116
 msgid "Olly"
-msgstr ""
+msgstr "Olly"
 
 #. [unit]: type=Trapper, id=Croquet
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:195
-#, fuzzy
-#| msgid "Death of Croquet"
 msgid "Croquet"
-msgstr "Croquet の死"
+msgstr "Croquet"
 
 #. [unit]: type=Great Wolf, id=Fangy
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:217
 msgid "Fangy"
-msgstr ""
+msgstr "Fangy"
 
 #. [attack]: type=blade
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:228
@@ -560,10 +550,8 @@ msgstr "ナーガの巣窟"
 
 #. [side]: type=Naga Myrmidon, id=Kssihiss
 #: A_Little_Adventure/scenarios/03_The_Nagas_Nest.cfg:54
-#, fuzzy
-#| msgid "Defeat Kssihiss"
 msgid "Kssihiss"
-msgstr "Kssihiss を倒す"
+msgstr "Kssihiss"
 
 #. [side]: type=Naga Myrmidon, id=Kssihiss
 #. [side]: type=Naga Myrmidon
@@ -574,10 +562,8 @@ msgstr "ナーガ"
 
 #. [side]: type=EXI_Ogregreat, id=Glubtrub
 #: A_Little_Adventure/scenarios/03_The_Nagas_Nest.cfg:98
-#, fuzzy
-#| msgid "Death of Glubtrub"
 msgid "Glubtrub"
-msgstr "Glubtrub の死"
+msgstr "Glubtrub"
 
 #. [attack]: type=blade
 #: A_Little_Adventure/scenarios/03_The_Nagas_Nest.cfg:132
@@ -661,7 +647,7 @@ msgstr "Wesnoth 王国 キャラバン駅 No.1"
 #. [unit]: id=Mimord, type=Dwarvish Berserker
 #: A_Little_Adventure/scenarios/04_The_Bloody_Hills.cfg:342
 msgid "Mimord"
-msgstr ""
+msgstr "Mimord"
 
 #. [message]: speaker=Mimord
 #. I'm assuming the "wrap" referred to here is an article of clothing:
@@ -741,7 +727,7 @@ msgstr "トカゲの島"
 #. [side]: type=Saurian Flanker, id=Giksy
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:45
 msgid "Giksy"
-msgstr ""
+msgstr "Giksy"
 
 #. [side]: type=Saurian Flanker, id=Giksy
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:83
@@ -751,12 +737,12 @@ msgstr "トカゲ族"
 #. [side]: type=Merman Triton, id=Joralda
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:94
 msgid "Joralda"
-msgstr ""
+msgstr "Joralda"
 
 #. [side]: type=Merman Triton, id=Joralda
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:103
 msgid "Nereids"
-msgstr "Nereids（ Merkfolk ）"
+msgstr "Nereids（ Merfolk ）"
 
 #. [objective]: condition=win
 #. The inclusion of "Squash" as a synonym for "Defeat" in this objective is for the benefit of Glubtrub:
@@ -833,46 +819,44 @@ msgstr "Gan-Tarkas を倒す"
 
 #. [side]: type=Orcish Warlord, id=Gan-Tarkas
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:99
-#, fuzzy
-#| msgid "Defeat Gan-Tarkas"
 msgid "Gan-Tarkas"
-msgstr "Gan-Tarkas を倒す"
+msgstr "Gan-Tarkas"
 
 #. [event]
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:156
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:163
 msgid "Trug"
-msgstr ""
+msgstr "Trug"
 
 #. [event]
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:157
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:164
 msgid "Bolg"
-msgstr ""
+msgstr "Bolg"
 
 #. [event]
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:158
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:165
 msgid "Snak"
-msgstr ""
+msgstr "Snak"
 
 #. [event]
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:159
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:166
 msgid "Zagr"
-msgstr ""
+msgstr "Zagr"
 
 #. [event]
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:160
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:167
 msgid "Lugh"
-msgstr ""
+msgstr "Lugh"
 
 #. [event]
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:161
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:168
 msgid "Beri"
-msgstr ""
+msgstr "Beri"
 
 #. [message]: speaker=Gan-Tarkas
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:332
